# pmevm

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  build_release  pmevem-backend.cabal  pmevm-backend.cabal  pmevm-gtk.cabal  pmevm.cabal  run_release  stack.yaml  ui.glade
.github/workflows/: ci.yml
app/: Main.hs
backend/: Cargo.toml  pmevm-backend.cabal
backend/app/: Main.hs
backend/src/: base.rs  i8080a.rs  keyboard.rs  lib.rs  monitor.rs  program.rs
backend/src/Data/: Pmevm.hs
backend/src/Data/Pmevm/: Keyboard.hs  Monitor.hs  Native.hs
backend/src/Data/Pmevm/Keyboard/: Native.hs
backend/src/Data/Pmevm/Monitor/: Native.hs
backend/test/: Spec.hs
backend/test/Data/Pmevm/: Spec.hs
backend/test/Data/Pmevm/Keyboard/: Spec.hs
gtk+/: pmevm-gtk.cabal  stack.yaml  ui.glade
gtk+/app/: Main.hs
gtk+/src/Pmevm/: Gui.hs
pmevm-backend/: Cargo.toml
pmevm-backend/src/: base.rs  keyboard.rs  lib.rs
src/: main.rs
src/Data/: Pmevm.hs
src/Data/Pmevm/: Keyboard.hs  Monitor.hs  Native.hs
src/Data/Pmevm/Keyboard/: Native.hs
src/Data/Pmevm/Monitor/: Native.hs
src/Pmevm/: Gui.hs
test/: Spec.hs
test/Data/Pmevm/: Spec.hs
test/Data/Pmevm/Keyboard/: Spec.hs
