[package]
edition = "2021"
name = "pmevm"
version = "0.0.0"
publish = false

[workspace]
members = [
  "backend"
]

[profile.dev]
panic = "abort"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true

[dependencies]
composable-allocators = { version = "0.2.3", default-features = false, features = ["global"] }
exit-no-std = "0.1.4"
panicking = { version = "0.4.0", default-features = false, features = ["abort"] }
paste = "1.0.8"
pmevm-backend = { path = "backend" }
rlibc = "1.0.0"
timer-no-std = "0.3.3"
tuifw-screen = "0.18.1"
tuifw-window = "0.18.1"

[target.'cfg(target_os="dos")'.dependencies]
dos-errno-and-panic = "0.0.1"
pc-atomics = "0.0.2"

[build-dependencies]
dos-cp-generator = "0.2.1"
