name: pmevm-backend
version: 0.1
synopsis: Simpliest microcomputer emulator.
description: Simpliest microcomputer emulator.
homepage: https://github.com/A1-Triard/pmevm-backend#readme
license: Apache
license-file: LICENSE
author: Warlock
maintainer: internalmike@gmail.com
copyright: 2017 Warlock
category: Web
build-type: Simple
-- extra-source-files:
cabal-version: >=1.10

library
  hs-source-dirs: src
  exposed-modules: Data.Pmevm
                 , Data.Pmevm.Monitor
                 , Data.Pmevm.Keyboard
  build-depends: base >= 4.7 && < 5
               , lens
               , vector
  default-extensions: CPP
                    , TemplateHaskell
                    , ViewPatterns
                    , MultiParamTypeClasses
                    , DeriveDataTypeable
                    , DeriveGeneric
                    , DeriveFoldable
                    , DeriveTraversable
                    , StandaloneDeriving
                    , UnicodeSyntax
                    , MagicHash
                    , DefaultSignatures
                    , NegativeLiterals
                    , PatternSynonyms
                    , ParallelListComp
                    , TransformListComp
                    , MonadComprehensions
                    , UnboxedTuples
                    , LambdaCase
                    , EmptyCase
                    , EmptyDataDecls
                    , MultiWayIf
                    , TypeOperators
                    , TypeFamilies
                    , KindSignatures
                    , LiberalTypeSynonyms
                    , ExistentialQuantification
                    , GADTs
                    , DeriveAnyClass
                    , FlexibleContexts
                    , FlexibleInstances
                    , OverloadedStrings
                    , DataKinds
                    , ExplicitForAll
                    , BangPatterns
                    , ScopedTypeVariables
                    , RankNTypes
  include-dirs: include
  ghc-options: -fmax-pmcheck-iterations=10000000 -O2 -Wall -Werror -fno-warn-unused-imports -fprint-potential-instances
  default-language: Haskell2010

test-suite pmevm-backend-test
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Spec.hs
  other-modules: Data.Pmevm.Spec
               , Data.Pmevm.Keyboard.Spec
  build-depends: base
               , HUnit
               , pmevm-backend
               , lens
               , vector
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  default-extensions: CPP
                    , TemplateHaskell
                    , ViewPatterns
                    , MultiParamTypeClasses
                    , DeriveDataTypeable
                    , DeriveGeneric
                    , DeriveFoldable
                    , DeriveTraversable
                    , StandaloneDeriving
                    , UnicodeSyntax
                    , MagicHash
                    , DefaultSignatures
                    , NegativeLiterals
                    , PatternSynonyms
                    , ParallelListComp
                    , TransformListComp
                    , MonadComprehensions
                    , UnboxedTuples
                    , LambdaCase
                    , EmptyCase
                    , EmptyDataDecls
                    , MultiWayIf
                    , TypeOperators
                    , TypeFamilies
                    , KindSignatures
                    , LiberalTypeSynonyms
                    , ExistentialQuantification
                    , GADTs
                    , DeriveAnyClass
                    , FlexibleContexts
                    , FlexibleInstances
                    , OverloadedStrings
                    , DataKinds
                    , ExplicitForAll
                    , BangPatterns
                    , ScopedTypeVariables
                    , RankNTypes
  include-dirs: include
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -fmax-pmcheck-iterations=10000000 -O2 -Wall -Werror -fno-warn-unused-imports -fprint-potential-instances
  default-language: Haskell2010

source-repository head
  type: git
  location: https://github.com/A1-Triard/pmevm-backend
