name: pmevm-gtk
version: 0.1
synopsis: Simpliest microcomputer emulator GTK+ UI.
description: Simpliest microcomputer emulator GTK+ UI.
homepage: https://github.com/A1-Triard/pmevm-gtk#readme
author: Warlock <internalmike@gmail.com>
maintainer: Warlock <internalmike@gmail.com>
copyright: 2017 Warlock <internalmike@gmail.com>
category: GUI
build-type: Simple
-- extra-source-files:
cabal-version: >=1.10
data-files: ui.glade

library
  hs-source-dirs: src
  exposed-modules: Pmevm.Gui
  other-modules: Paths_pmevm_gtk
  build-depends: base >= 4.7 && < 5
               , pmevm-backend
               , clock
               , gi-gdk
               , gi-glib
               , gi-gtk
               , lens
               , text
               , transformers
               , vector
  default-extensions: BangPatterns
                    , CPP
                    , DataKinds
                    , DefaultSignatures
                    , DeriveDataTypeable
                    , DeriveGeneric
                    , DeriveFoldable
                    , DeriveTraversable
                    , EmptyCase
                    , EmptyDataDecls
                    , ExistentialQuantification
                    , ExplicitForAll
                    , FlexibleContexts
                    , FlexibleInstances
                    , GADTs
                    , GeneralizedNewtypeDeriving
                    , KindSignatures
                    , LambdaCase
                    , LiberalTypeSynonyms
                    , MagicHash
                    , MonadComprehensions
                    , MultiParamTypeClasses
                    , MultiWayIf
                    , NegativeLiterals
                    , OverloadedStrings
                    , ParallelListComp
                    , PatternSynonyms
                    , RankNTypes
                    , ScopedTypeVariables
                    , StandaloneDeriving
                    , TemplateHaskell
                    , TransformListComp
                    , TypeFamilies
                    , TypeOperators
                    , UnboxedTuples
                    , UnicodeSyntax
                    , ViewPatterns
  include-dirs: include
  ghc-options: -fmax-pmcheck-iterations=10000000 -O2 -Wall -Werror -fno-warn-unused-imports -fprint-potential-instances
  default-language: Haskell2010

executable gmevm
  hs-source-dirs: app
  main-is: Main.hs
  build-depends: base
               , pmevm-gtk
  default-extensions: BangPatterns
                    , CPP
                    , DataKinds
                    , DefaultSignatures
                    , DeriveDataTypeable
                    , DeriveGeneric
                    , DeriveFoldable
                    , DeriveTraversable
                    , EmptyCase
                    , EmptyDataDecls
                    , ExistentialQuantification
                    , ExplicitForAll
                    , FlexibleContexts
                    , FlexibleInstances
                    , GADTs
                    , GeneralizedNewtypeDeriving
                    , KindSignatures
                    , LambdaCase
                    , LiberalTypeSynonyms
                    , MagicHash
                    , MonadComprehensions
                    , MultiParamTypeClasses
                    , MultiWayIf
                    , NegativeLiterals
                    , OverloadedStrings
                    , ParallelListComp
                    , PatternSynonyms
                    , RankNTypes
                    , ScopedTypeVariables
                    , StandaloneDeriving
                    , TemplateHaskell
                    , TransformListComp
                    , TypeFamilies
                    , TypeOperators
                    , UnboxedTuples
                    , UnicodeSyntax
                    , ViewPatterns
  include-dirs: include
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -fmax-pmcheck-iterations=10000000 -O2 -Wall -Werror -fno-warn-unused-imports -fprint-potential-instances
  default-language: Haskell2010

test-suite pmevm-gtk-test
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Spec.hs
  build-depends: base
               , HUnit
               , pmevm-gtk
               , clock
               , gi-gdk
               , gi-glib
               , gi-gtk
               , lens
               , text
               , transformers
               , vector
  default-extensions: BangPatterns
                    , CPP
                    , DataKinds
                    , DefaultSignatures
                    , DeriveDataTypeable
                    , DeriveGeneric
                    , DeriveFoldable
                    , DeriveTraversable
                    , EmptyCase
                    , EmptyDataDecls
                    , ExistentialQuantification
                    , ExplicitForAll
                    , FlexibleContexts
                    , FlexibleInstances
                    , GADTs
                    , GeneralizedNewtypeDeriving
                    , KindSignatures
                    , LambdaCase
                    , LiberalTypeSynonyms
                    , MagicHash
                    , MonadComprehensions
                    , MultiParamTypeClasses
                    , MultiWayIf
                    , NegativeLiterals
                    , OverloadedStrings
                    , ParallelListComp
                    , PatternSynonyms
                    , RankNTypes
                    , ScopedTypeVariables
                    , StandaloneDeriving
                    , TemplateHaskell
                    , TransformListComp
                    , TypeFamilies
                    , TypeOperators
                    , UnboxedTuples
                    , UnicodeSyntax
                    , ViewPatterns
  include-dirs: include
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -fmax-pmcheck-iterations=10000000 -O2 -Wall -Werror -fno-warn-unused-imports -fprint-potential-instances
  default-language: Haskell2010

source-repository head
  type: git
  location: https://github.com/A1-Triard/pmevm-gtk
